--- a/Week10/Exercise_LinearReg_Gradient.ipynb
+++ b/Week10/Exercise_LinearReg_Gradient.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regr = linear_model.####ADD YOUR CODE HERE#####\n",
+    "regr = linear_model.LinearRegression####ADD YOUR CODE HERE#####\n",
     "\n",
     "#Once you defined your model, use the method .fit to fit to the data \n",
     "####ADD YOUR CODE HERE#####\n",
@@ -301,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
