--- a/Week2/DSF_2Week_Python_Solution.ipynb
+++ b/Week2/DSF_2Week_Python_Solution.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -835,8 +835,8 @@
     "scores = {\"Hanna\": 4, \"Markus\": 3, \"Amat\": 5}\n",
     "\n",
     "# iterate through its keys\n",
-    "for key in scores:\n",
-    "    print(\"Key:\", key, \"Value:\", scores[key])"
+    "for key,values in scores.items():\n",
+    "    print(\"Key:\", key, \"Value:\", values)"
    ]
   },
   {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -856,14 +856,14 @@
      "output_type": "stream",
      "text": [
       "Chicago is in USA\n",
-      "London is in England\n",
+      "London is in Swiss\n",
       "Zuerich is in Switzerland\n"
      ]
     }
    ],
    "source": [
     "cities = [\"Chicago\", \"London\", \"Zuerich\"]\n",
-    "countries = [\"USA\", \"England\", \"Switzerland\"]\n",
+    "countries = [\"USA\", \"Engaland\", \"Switzerland\"]\n",
     "\n",
     "for city, country in zip(cities, countries):\n",
     "    print(city, \"is in\", country)"
@@ -940,16 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple is at position number 0 in the list.\n",
+      "pear is at position number 0 in the list.\n",
       "banana is at position number 1 in the list.\n",
-      "feijoa is at position number 2 in the list.\n"
+      "apple is at position number 2 in the list.\n"
      ]
     }
    ],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
        "3"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,14 +1287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 2, 2: 1, 3: 0, 4: 1, 5: 1, 6: 0}\n"
+      "{1: 155, 2: 194, 3: 162, 4: 166, 5: 162, 6: 161}\n"
      ]
     }
    ],
