--- a/Week11/Exercise11_Logistic_regression.ipynb
+++ b/Week11/Exercise11_Logistic_regression.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_accuracy =  #ADD YOU CODE HERE####\n",
+    "mean_accuracy =  log_reg.accuracy()#ADD YOU CODE HERE####\n",
     "print(\"The accuracy of your model is {0}%\".format(np.round(mean_accuracy*100),2))"
    ]
   },
