--- a/Week4/DSF_DataOrganization_inclSolution.ipynb
+++ b/Week4/DSF_DataOrganization_inclSolution.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
        "      <td>0</td>\n",
        "      <td>18.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Highly Urban/ Urban</td>\n",
+       "      <td>Highly Urban</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -977,7 +977,7 @@
        "      <td>257252</td>\n",
        "      <td>z_No</td>\n",
        "      <td>...</td>\n",
-       "      <td>Minivan</td>\n",
+       "      <td>Convertible</td>\n",
        "      <td>yes</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1073,24 +1073,24 @@
        "3      3  727598473.0         0  35.0         1  10.0       16039      No   \n",
        "4      4  450221861.0         0  51.0         0  14.0           0      No   \n",
        "\n",
-       "   HOME_VAL_USD MSTATUS  ... CAR_TYPE RED_CAR OLDCLAIM_USD  CLM_FREQ REVOKED  \\\n",
-       "0             0    z_No  ...  Minivan     yes         4461         2      No   \n",
-       "1        257252    z_No  ...  Minivan     yes            0         0      No   \n",
-       "2             0    z_No  ...      Van     yes            0         0      No   \n",
-       "3        124191     Yes  ...    z_SUV      no        38690         2      No   \n",
-       "4        306251     Yes  ...  Minivan     yes            0         0      No   \n",
+       "   HOME_VAL_USD MSTATUS  ...     CAR_TYPE RED_CAR OLDCLAIM_USD  CLM_FREQ  \\\n",
+       "0             0    z_No  ...      Minivan     yes         4461         2   \n",
+       "1        257252    z_No  ...  Convertible     yes            0         0   \n",
+       "2             0    z_No  ...          Van     yes            0         0   \n",
+       "3        124191     Yes  ...        z_SUV      no        38690         2   \n",
+       "4        306251     Yes  ...      Minivan     yes            0         0   \n",
        "\n",
-       "   MVR_PTS  CLM_AMT_USD CAR_AGE CLAIM_FLAG           URBANICITY  \n",
-       "0        3            0    18.0          0  Highly Urban/ Urban  \n",
-       "1        0            0     1.0          0  Highly Urban/ Urban  \n",
-       "2        2            0    10.0          0  Highly Urban/ Urban  \n",
-       "3        3            0    10.0          0  Highly Urban/ Urban  \n",
-       "4        0            0     6.0          0  Highly Urban/ Urban  \n",
+       "  REVOKED  MVR_PTS  CLM_AMT_USD CAR_AGE CLAIM_FLAG           URBANICITY  \n",
+       "0      No        3            0    18.0          0         Highly Urban  \n",
+       "1      No        0            0     1.0          0  Highly Urban/ Urban  \n",
+       "2      No        2            0    10.0          0  Highly Urban/ Urban  \n",
+       "3      No        3            0    10.0          0  Highly Urban/ Urban  \n",
+       "4      No        0            0     6.0          0  Highly Urban/ Urban  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2759,7 +2759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2876,7 +2876,7 @@
        "[2 rows x 27 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
